syntax = "proto3";

package cart;

option go_package = "/cart";

service CartrSevice{
  rpc AddItem (AddItemReq) returns (AddItemResp){}
  rpc GetCart (GetCartReq) returns (GetCartResp){}
  rpc EmptyCart (EmptyCartReq) returns (EmptyCartResp){}
  rpc GetCartByProduct (GetCartByProductReq) returns (GetCartByProductResp){}
  rpc RemoveCartByProduct (RemoveCartByProductReq) returns (RemoveCartByProductResp){}
}

message RemoveCartByProductReq{
  uint32 user_id = 1;
  repeated uint32 product_ids = 2;
}

message RemoveCartByProductResp{
  
}
message GetCartByProductReq{
  uint32 user_id = 1;
  repeated uint32 product_ids = 2;
}

message GetCartByProductResp{
  repeated CartItem items = 1;
}

message CartItem {
    uint32 product_id = 1;
    uint32 quantity = 2;
}
message AddItemReq{
    uint32 user_id = 1;
  CartItem items  = 2;
}

message AddItemResp{
}

message GetCartReq{
  uint32 user_id = 1;
}

message GetCartResp{
  repeated CartItem items = 1;
}

message EmptyCartReq{
    uint32 user_id = 1;
}

message EmptyCartResp{
}